--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Integrativestgmodule2016</h1>
+      <h1 class="project-name">The 2016 Integrative STG Module</h1>
       <h2 class="project-tagline">The 2016 Integrative STG Module</h2>
       <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016" class="btn">View on GitHub</a>
       <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/zipball/master" class="btn">Download .zip</a>
