--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
+    <section class="page-header">
+      <h1 class="project-name">The 2016 Integrative STG Module</h1>
+      <h2 class="project-tagline">The 2016 Integrative STG Module</h2>
+      <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016" class="btn">View on GitHub</a>
+      <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/tarball/master" class="btn">Download .tar.gz</a>
+    </section>
+
   <body>
     <section class="main-content">
       <h3>
