--- a/index.html
+++ b/index.html
@@ -19,30 +19,206 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="the-2016-integrative-stg-module" class="anchor" href="#the-2016-integrative-stg-module" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The 2016 Integrative STG Module</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Welcome to the resources webpage for the 2016 Integrative STG Module! We are really excited to spend the next two weeks with you! Please use this webpage as a community resource where you will find links to lessons, protocols, useful tools, and information about module and the instructors. A description of the overall module objectives and goals, <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/blob/master/ModuleOverview.md">visit this page</a>. </p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2>
+<a id="meet-the-instructors" class="anchor" href="#meet-the-instructors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Meet the Instructors</h2>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>During this module, you will learn a lot from <a href="https://schulz.biology.missouri.edu">David Schulz</a>, <a href="http://evakfischer.weebly.com">Eva Fischer</a>, <a href="http://raynamharris.github.io">Rayna Harris</a>,
+<a href="https://schulz.biology.missouri.edu">Adam Northcutt</a>, and <a href="http://cichlid.biosci.utexas.edu">Hans Hofmann</a>. You can also read our short biographies <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/blob/master/Instructors.md">here</a>.</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<h2>
+<a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Schedule</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<table>
+<thead>
+<tr>
+<th align="left">Day</th>
+<th align="left">Activity</th>
+<th align="left">Where</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="left">Monday 7-4</td>
+<td align="left">Holiday - No lab work</td>
+<td align="left">Anywhere but the lab!</td>
+</tr>
+<tr>
+<td align="left">Tuesday 7-5</td>
+<td align="left">Module Overview &amp; Introductions</td>
+<td align="left">TBA</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Pipette exercise</td>
+<td align="left">Loeb 157</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left"><a href="https://github.com/raynamharris/MolecularBiologyProtocols/blob/master/MaxwellRSCsimplyRNA.md">RNA extraction exercise</a></td>
+<td align="left">Loeb 157</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">1 Step qPCR exercise</td>
+<td align="left">Loeb 157</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">1 Step qPCR analysis</td>
+<td align="left">Loeb 157</td>
+</tr>
+<tr>
+<td align="left">Wednesday 7-6</td>
+<td align="left">qPCR principles talk</td>
+<td align="left">TBA</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">qPCR - cDNA validation exercise</td>
+<td align="left">Loeb 157</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Primer design exercise</td>
+<td align="left">Loeb G70N</td>
+</tr>
+<tr>
+<td align="left">Thursday 7-7</td>
+<td align="left">Order primers</td>
+<td align="left">Online</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">pre-amplification of low abundance samples</td>
+<td align="left">Loeb 157</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">qPCR exercise: to expression across tissues</td>
+<td align="left">Loeb 157</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">qPCR analysis</td>
+<td align="left">Loeb 157</td>
+</tr>
+<tr>
+<td align="left">Friday 7-8</td>
+<td align="left">Single neuron qPCR</td>
+<td align="left">Loeb 157</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Discuss qPCR special topics</td>
+<td align="left">TBA</td>
+</tr>
+<tr>
+<td align="left">Saturday 7-9</td>
+<td align="left">Discuss single cell transcriptomics</td>
+<td align="left">TBA</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Discuss independent projects</td>
+<td align="left">TBA</td>
+</tr>
+<tr>
+<td align="left">Sunday 7-10</td>
+<td align="left">Day of Rest</td>
+<td align="left">Anywhere but the lab!</td>
+</tr>
+<tr>
+<td align="left">Monday 7-11</td>
+<td align="left">Introduction to next generation sequencing (NGS)</td>
+<td align="left">TBA</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left"><a href="https://github.com/raynamharris/Shell_Intro_for_Transcriptomics">Introduction to Unix</a></td>
+<td align="left">Loeb G70N</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left"><a href="https://github.com/raynamharris/TACC_Intro_for_Bioinformatics">Introduction to High Performance Computing</a></td>
+<td align="left">Loeb G70N</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Assess read quality exercise</td>
+<td align="left">Loeb G70N</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Trim and filter reads exercise</td>
+<td align="left">Loeb G70N</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Re-assess read quality exercise</td>
+<td align="left">Loeb G70N</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Discuss de novo transcriptome assembly</td>
+<td align="left">TBA</td>
+</tr>
+<tr>
+<td align="left">Tuesday 7-12</td>
+<td align="left">Discuss NGS experimental design</td>
+<td align="left">TBA</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Align reads to the reference transcriptome exercise</td>
+<td align="left">Loeb G70N</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Estimate read counts exercise</td>
+<td align="left">Loeb G70N</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Differential gene expression exercise: edgeR</td>
+<td align="left">Loeb G70N</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Differential gene expression exercise: DNA Star</td>
+<td align="left">Loeb G70N</td>
+</tr>
+<tr>
+<td align="left">Wednesday 7-13</td>
+<td align="left">Special Projects qPCR primer validation</td>
+<td align="left">Loeb 157</td>
+</tr>
+<tr>
+<td align="left"></td>
+<td align="left">Analysis of gene networks and ontology</td>
+<td align="left">Loeb G70N</td>
+</tr>
+<tr>
+<td align="left">Thursday 7-14</td>
+<td align="left">Work on Special Projects</td>
+<td align="left">Loeb 157</td>
+</tr>
+<tr>
+<td align="left">Friday 7-15</td>
+<td align="left">Work on Special Projects</td>
+<td align="left">Loeb 157</td>
+</tr>
+<tr>
+<td align="left">Saturday 7-16</td>
+<td align="left">Special Project Presentations</td>
+<td align="left">Loeb G70N</td>
+</tr>
+</tbody>
+</table>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/raynamharris/IntegrativeSTGmodule2016">The Integrative  STG Module 2016</a> is maintained by <a href="https://github.com/raynamharris">raynamharris</a>.</span>
