--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>The Integrative  STG Module 2016 by raynamharris</title>
+    <title>The Integrative  STG Module 2016</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -13,9 +13,6 @@
     <section class="page-header">
       <h1 class="project-name">The Integrative  STG Module 2016</h1>
       <h2 class="project-tagline">The 2016 Integrative STG Module</h2>
-      <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016" class="btn">View on GitHub</a>
-      <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
