Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>The Integrative  STG Module 2016</title>
+    <title>The Integrative  STG Module 2016 by raynamharris</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -13,13 +13,13 @@
     <section class="page-header">
       <h1 class="project-name">The Integrative  STG Module 2016</h1>
       <h2 class="project-tagline">The 2016 Integrative STG Module</h2>
+      <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016" class="btn">View on GitHub</a>
+      <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="the-2016-integrative-stg-module" class="anchor" href="#the-2016-integrative-stg-module" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The 2016 Integrative STG Module</h1>
-
-<p>Welcome to the resources webpage for the 2016 Integrative STG Module! We are really excited to spend the next two weeks with you! Please use this webpage as a community resource where you will find links to lessons, protocols, useful tools, and information about module and the instructors. A description of the overall module objectives and goals, <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/blob/master/ModuleOverview.md">visit this page</a>. </p>
+      <p>Welcome to the resources webpage for the 2016 Integrative STG Module! We are really excited to spend the next two weeks with you! Please use this webpage as a community resource where you will find links to lessons, protocols, useful tools, and information about module and the instructors. A description of the overall module objectives and goals, <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/blob/master/ModuleOverview.md">visit this page</a>. </p>
 
 <h2>
 <a id="meet-the-instructors" class="anchor" href="#meet-the-instructors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Meet the Instructors</h2>
