--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">The Integrative  STG Module 2016</h1>
-      <h2 class="project-tagline">The 2016 Integrative STG Module</h2>
-      <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016" class="btn">View on GitHub</a>
-      <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/tarball/master" class="btn">Download .tar.gz</a>
+      <h1 class="project-name">The 2016 Integrative STG Module</h1>
+      <h2 class="project-tagline">Neural Systems & Behavior Course</h2>
     </section>
 
     <section class="main-content">
