--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">The 2016 Integrative STG Module</h1>
-      <h2 class="project-tagline">Neural Systems & Behavior Course</h2>
+      <h2 class="project-tagline">Neural Systems and Behavior Course</h2>
     </section>
 
     <section class="main-content">
