--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <tr>
 <td align="left">Monday 7-4</td>
 <td align="left">Holiday - No lab work</td>
-<td align="left">Anywhere but the lab!</td>
+<td align="left">Anywhere but lab!</td>
 </tr>
 <tr>
 <td align="left">Tuesday 7-5</td>
@@ -124,7 +124,7 @@
 <tr>
 <td align="left">Sunday 7-10</td>
 <td align="left">Day of Rest</td>
-<td align="left">Anywhere but the lab!</td>
+<td align="left">Anywhere but lab!</td>
 </tr>
 <tr>
 <td align="left">Monday 7-11</td>
