--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <section class="main-content">
-      <p>Welcome to the resources webpage for the 2016 Integrative STG Module! We are really excited to spend the next two weeks with you! Please use this webpage as a community resource where you will find links to lessons, protocols, useful tools, and information about module and the instructors. A description of the overall module objectives and goals, <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/blob/master/ModuleOverview.md">visit this page</a>. </p>
+      <p>Welcome to the resources webpage for the 2016 Integrative STG Module! We are really excited to spend the next two weeks with you! Please use this webpage as a community resource where you will find links to lessons, protocols, useful tools, and information about module and the instructors. <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/blob/master/ModuleOverview.md">Visit this page</a> for a description of the overall module objectives and goals. </p>
 
 <h2>
 <a id="meet-the-instructors" class="anchor" href="#meet-the-instructors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Meet the Instructors</h2>
