--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </tr>
 <tr>
 <td align="left"></td>
-<td align="left"><a href="https://github.com/raynamharris/MolecularBiologyProtocols/blob/master/MaxwellRSCsimplyRNA.md">RNA extraction exercise</a></td>
+<td align="left">RNA extraction exercise</td>
 <td align="left">Loeb 157</td>
 </tr>
 <tr>
