--- a/index.html
+++ b/index.html
@@ -24,195 +24,8 @@
 <p>During this module, you will learn a lot from <a href="https://schulz.biology.missouri.edu">David Schulz</a>, <a href="http://evakfischer.weebly.com">Eva Fischer</a>, <a href="http://raynamharris.github.io">Rayna Harris</a>,
 <a href="https://schulz.biology.missouri.edu">Adam Northcutt</a>, and <a href="http://cichlid.biosci.utexas.edu">Hans Hofmann</a>. You can also read our short biographies <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016/blob/master/Instructors.md">here</a>.</p>
 
-<h2>
-<a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Schedule</h2>
+<p> For all the resouces, included protocols and a schedule, visit <a href="https://github.com/raynamharris/IntegrativeSTGmodule2016">this page.</a>
 
-<table>
-<thead>
-<tr>
-<th align="left">Day</th>
-<th align="left">Activity</th>
-<th align="left">Where</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td align="left">Monday 7-4</td>
-<td align="left">Holiday - No lab work</td>
-<td align="left">Anywhere but lab!</td>
-</tr>
-<tr>
-<td align="left">Tuesday 7-5</td>
-<td align="left">Module Overview &amp; Introductions</td>
-<td align="left">TBA</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Pipette exercise</td>
-<td align="left">Loeb 157</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">RNA extraction exercise</td>
-<td align="left">Loeb 157</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">1 Step qPCR exercise</td>
-<td align="left">Loeb 157</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">1 Step qPCR analysis</td>
-<td align="left">Loeb 157</td>
-</tr>
-<tr>
-<td align="left">Wednesday 7-6</td>
-<td align="left">qPCR principles talk</td>
-<td align="left">TBA</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">qPCR - cDNA validation exercise</td>
-<td align="left">Loeb 157</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Primer design exercise</td>
-<td align="left">Loeb G70N</td>
-</tr>
-<tr>
-<td align="left">Thursday 7-7</td>
-<td align="left">Order primers</td>
-<td align="left">Online</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">pre-amplification of low abundance samples</td>
-<td align="left">Loeb 157</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">qPCR exercise: to expression across tissues</td>
-<td align="left">Loeb 157</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">qPCR analysis</td>
-<td align="left">Loeb 157</td>
-</tr>
-<tr>
-<td align="left">Friday 7-8</td>
-<td align="left">Single neuron qPCR</td>
-<td align="left">Loeb 157</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Discuss qPCR special topics</td>
-<td align="left">TBA</td>
-</tr>
-<tr>
-<td align="left">Saturday 7-9</td>
-<td align="left">Discuss single cell transcriptomics</td>
-<td align="left">TBA</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Discuss independent projects</td>
-<td align="left">TBA</td>
-</tr>
-<tr>
-<td align="left">Sunday 7-10</td>
-<td align="left">Day of Rest</td>
-<td align="left">Anywhere but lab!</td>
-</tr>
-<tr>
-<td align="left">Monday 7-11</td>
-<td align="left">Introduction to next generation sequencing (NGS)</td>
-<td align="left">TBA</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left"><a href="https://github.com/raynamharris/Shell_Intro_for_Transcriptomics">Introduction to Unix</a></td>
-<td align="left">Loeb G70N</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left"><a href="https://github.com/raynamharris/TACC_Intro_for_Bioinformatics">Introduction to High Performance Computing</a></td>
-<td align="left">Loeb G70N</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Assess read quality exercise</td>
-<td align="left">Loeb G70N</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Trim and filter reads exercise</td>
-<td align="left">Loeb G70N</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Re-assess read quality exercise</td>
-<td align="left">Loeb G70N</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Discuss de novo transcriptome assembly</td>
-<td align="left">TBA</td>
-</tr>
-<tr>
-<td align="left">Tuesday 7-12</td>
-<td align="left">Discuss NGS experimental design</td>
-<td align="left">TBA</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Align reads to the reference transcriptome exercise</td>
-<td align="left">Loeb G70N</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Estimate read counts exercise</td>
-<td align="left">Loeb G70N</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Differential gene expression exercise: edgeR</td>
-<td align="left">Loeb G70N</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Differential gene expression exercise: DNA Star</td>
-<td align="left">Loeb G70N</td>
-</tr>
-<tr>
-<td align="left">Wednesday 7-13</td>
-<td align="left">Special Projects qPCR primer validation</td>
-<td align="left">Loeb 157</td>
-</tr>
-<tr>
-<td align="left"></td>
-<td align="left">Analysis of gene networks and ontology</td>
-<td align="left">Loeb G70N</td>
-</tr>
-<tr>
-<td align="left">Thursday 7-14</td>
-<td align="left">Work on Special Projects</td>
-<td align="left">Loeb 157</td>
-</tr>
-<tr>
-<td align="left">Friday 7-15</td>
-<td align="left">Work on Special Projects</td>
-<td align="left">Loeb 157</td>
-</tr>
-<tr>
-<td align="left">Saturday 7-16</td>
-<td align="left">Special Project Presentations</td>
-<td align="left">Loeb G70N</td>
-</tr>
-</tbody>
-</table>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/raynamharris/IntegrativeSTGmodule2016">The Integrative  STG Module 2016</a> is maintained by <a href="https://github.com/raynamharris">raynamharris</a>.</span>
